// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/DocGenSidebar should render DocGen sidebar component correctly with tags list 1`] = `
<DocGenSidebar
  getDocGenTags={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  logger={
    Object {
      "onReadyMetric": [MockFunction],
    }
  }
>
  <SidebarContent
    elementId=""
    sidebarView="metadata"
    title="Doc Gen Tags"
  >
    <div
      aria-labelledby="metadata"
      className="bcs-content"
      data-testid="bcs-content"
      id="metadata-content"
      role="tabpanel"
    >
      <div
        className="bcs-content-header"
      >
        <h3
          className="bcs-title"
        >
          Doc Gen Tags
        </h3>
      </div>
      <div
        className="bcs-scroll-content-wrapper"
      >
        <div
          className="bcs-scroll-content"
        >
          <div
            className="docgen-sidebar"
          >
            <TagsSection
              message={
                Object {
                  "defaultMessage": "Text tags",
                  "id": "sidebar.docgen.textTags",
                }
              }
              tags={
                Array [
                  Object {
                    "jsonPaths": Array [
                      "isActive",
                    ],
                    "tagContent": "{{ isActive }}",
                    "tagType": "text",
                  },
                  Object {
                    "jsonPaths": Array [
                      "about",
                    ],
                    "tagContent": "{{ about }}",
                    "tagType": "text",
                  },
                  Object {
                    "jsonPaths": Array [
                      "phone",
                    ],
                    "tagContent": "{{ phone }}",
                    "tagType": "text",
                  },
                  Object {
                    "jsonPaths": Array [
                      "company",
                    ],
                    "tagContent": "{{ company }}",
                    "tagType": "text",
                  },
                ]
              }
            >
              <div
                className="docgen-tag-section"
              >
                <span
                  className="docgen-tag-section-header"
                >
                  <FormattedMessage
                    defaultMessage="Text tags"
                    id="sidebar.docgen.textTags"
                  >
                    <div />
                  </FormattedMessage>
                </span>
                <TagsList
                  tags={
                    Array [
                      Object {
                        "jsonPaths": Array [
                          "isActive",
                        ],
                        "tagContent": "{{ isActive }}",
                        "tagType": "text",
                      },
                      Object {
                        "jsonPaths": Array [
                          "about",
                        ],
                        "tagContent": "{{ about }}",
                        "tagType": "text",
                      },
                      Object {
                        "jsonPaths": Array [
                          "phone",
                        ],
                        "tagContent": "{{ phone }}",
                        "tagType": "text",
                      },
                      Object {
                        "jsonPaths": Array [
                          "company",
                        ],
                        "tagContent": "{{ company }}",
                        "tagType": "text",
                      },
                    ]
                  }
                >
                  <div>
                    <span
                      className="docgen-tag-path"
                      key="isActive"
                    >
                      isActive
                    </span>
                    <span
                      className="docgen-tag-path"
                      key="about"
                    >
                      about
                    </span>
                    <span
                      className="docgen-tag-path"
                      key="phone"
                    >
                      phone
                    </span>
                    <span
                      className="docgen-tag-path"
                      key="company"
                    >
                      company
                    </span>
                  </div>
                </TagsList>
              </div>
            </TagsSection>
            <TagsSection
              message={
                Object {
                  "defaultMessage": "Image tags",
                  "id": "sidebar.docgen.imageTags",
                }
              }
              tags={Array []}
            />
          </div>
        </div>
      </div>
    </div>
  </SidebarContent>
</DocGenSidebar>
`;

exports[`elements/content-sidebar/DocGenSidebar should render empty state when there are no tags 1`] = `
<DocGenSidebar
  getDocGenTags={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  logger={
    Object {
      "onReadyMetric": [MockFunction],
    }
  }
>
  <SidebarContent
    elementId=""
    sidebarView="metadata"
    title="Doc Gen Tags"
  >
    <div
      aria-labelledby="metadata"
      className="bcs-content"
      data-testid="bcs-content"
      id="metadata-content"
      role="tabpanel"
    >
      <div
        className="bcs-content-header"
      >
        <h3
          className="bcs-title"
        >
          Doc Gen Tags
        </h3>
      </div>
      <div
        className="bcs-scroll-content-wrapper"
      >
        <div
          className="bcs-scroll-content"
        >
          <div
            className="docgen-sidebar"
          >
            <NoTagsAvailable>
              <div>
                This document has no tags
              </div>
            </NoTagsAvailable>
          </div>
        </div>
      </div>
    </div>
  </SidebarContent>
</DocGenSidebar>
`;

exports[`elements/content-sidebar/DocGenSidebar should render loading state 1`] = `
<DocGenSidebar
  getDocGenTags={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  intl={
    Object {
      "formatMessage": [Function],
    }
  }
  logger={
    Object {
      "onReadyMetric": [MockFunction],
    }
  }
>
  <SidebarContent
    elementId=""
    sidebarView="metadata"
    title="Doc Gen Tags"
  >
    <div
      aria-labelledby="metadata"
      className="bcs-content"
      data-testid="bcs-content"
      id="metadata-content"
      role="tabpanel"
    >
      <div
        className="bcs-content-header"
      >
        <h3
          className="bcs-title"
        >
          Doc Gen Tags
        </h3>
      </div>
      <div
        className="bcs-scroll-content-wrapper"
      >
        <div
          className="bcs-scroll-content"
        >
          <div
            className="docgen-sidebar"
          >
            <Loading>
              <div>
                Loading tags
              </div>
            </Loading>
          </div>
        </div>
      </div>
    </div>
  </SidebarContent>
</DocGenSidebar>
`;
